--- a/assets/styles/estilos.css
+++ b/assets/styles/estilos.css
@@ -1,7 +1,7 @@
 .navegacion{
-position: fixed;
 
-z-index: 1;
+
+
 }
 .links{
 	list-style: none;
@@ -22,3 +22,241 @@ z-index: 1;
 .bg-grisclaro{
 	background: gainsboro;
 }
+.bannerquienessomos{
+	position: absolute;
+    top: 400px; left: 300px;
+	font-size: 130px;
+	z-index: 1;
+
+}
+
+
+  
+  .container {
+	max-width: 1044px;
+	margin: 0 auto;
+	padding: 0 20px;
+  }
+  
+  .carousel {
+	display: block;
+	text-align: left;
+	position: relative;
+	margin-bottom: 22px;
+  }
+  .carousel > input {
+	clip: rect(1px, 1px, 1px, 1px);
+	clip-path: inset(50%);
+	height: 1px;
+	width: 1px;
+	margin: -1px;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+  }
+  .carousel > input:nth-of-type(6):checked ~ .carousel__slides .carousel__slide:first-of-type {
+	margin-left: -500%;
+  }
+  .carousel > input:nth-of-type(5):checked ~ .carousel__slides .carousel__slide:first-of-type {
+	margin-left: -400%;
+  }
+  .carousel > input:nth-of-type(4):checked ~ .carousel__slides .carousel__slide:first-of-type {
+	margin-left: -300%;
+  }
+  .carousel > input:nth-of-type(3):checked ~ .carousel__slides .carousel__slide:first-of-type {
+	margin-left: -200%;
+  }
+  .carousel > input:nth-of-type(2):checked ~ .carousel__slides .carousel__slide:first-of-type {
+	margin-left: -100%;
+  }
+  .carousel > input:nth-of-type(1):checked ~ .carousel__slides .carousel__slide:first-of-type {
+	margin-left: 0%;
+  }
+  .carousel > input:nth-of-type(1):checked ~ .carousel__thumbnails li:nth-of-type(1) {
+	box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
+  }
+  .carousel > input:nth-of-type(2):checked ~ .carousel__thumbnails li:nth-of-type(2) {
+	box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
+  }
+  .carousel > input:nth-of-type(3):checked ~ .carousel__thumbnails li:nth-of-type(3) {
+	box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
+  }
+  .carousel > input:nth-of-type(4):checked ~ .carousel__thumbnails li:nth-of-type(4) {
+	box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
+  }
+  .carousel > input:nth-of-type(5):checked ~ .carousel__thumbnails li:nth-of-type(5) {
+	box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
+  }
+  .carousel > input:nth-of-type(6):checked ~ .carousel__thumbnails li:nth-of-type(6) {
+	box-shadow: 0px 0px 0px 5px rgba(0, 0, 255, 0.5);
+  }
+  
+  .carousel__slides {
+	position: relative;
+	z-index: 1;
+	padding: 0;
+	margin: 0;
+	overflow: hidden;
+	white-space: nowrap;
+	box-sizing: border-box;
+	display: flex;
+  }
+  
+  .carousel__slide {
+	position: relative;
+	display: block;
+	flex: 1 0 100%;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	transition: all 300ms ease-out;
+	vertical-align: top;
+	box-sizing: border-box;
+	white-space: normal;
+  }
+  .carousel__slide figure {
+	display: flex;
+	margin: 0;
+  }
+  .carousel__slide div {
+	position: relative;
+	width: 100%;
+  }
+  .carousel__slide div:before {
+	display: block;
+	content: "";
+	width: 100%;
+	padding-top: 66.6666666667%;
+  }
+  .carousel__slide div > img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+  }
+  .carousel__slide img {
+	display: block;
+	flex: 1 1 auto;
+	object-fit: cover;
+  }
+  .carousel__slide figcaption {
+	align-self: flex-end;
+	padding: 20px 20px 0 20px;
+	flex: 0 0 auto;
+	width: 25%;
+	min-width: 150px;
+  }
+  .carousel__slide .credit {
+	margin-top: 1rem;
+	color: rgba(0, 0, 0, 0.5);
+	display: block;
+  }
+  .carousel__slide.scrollable {
+	overflow-y: scroll;
+  }
+  
+  .carousel__thumbnails {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	display: flex;
+	margin: 0 -10px;
+  }
+  .carousel__slides + .carousel__thumbnails {
+	margin-top: 20px;
+  }
+  .carousel__thumbnails li {
+	flex: 1 1 auto;
+	max-width: calc((100% / 6) - 20px);
+	margin: 0 10px;
+	transition: all 300ms ease-in-out;
+  }
+  .carousel__thumbnails label {
+	display: block;
+	position: relative;
+  }
+  .carousel__thumbnails label:before {
+	display: block;
+	content: "";
+	width: 100%;
+	padding-top: 100%;
+  }
+  .carousel__thumbnails label > img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+  }
+  .carousel__thumbnails label:hover, .carousel__thumbnails label:focus {
+	cursor: pointer;
+  }
+  .carousel__thumbnails label:hover img, .carousel__thumbnails label:focus img {
+	box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.25);
+	transition: all 300ms ease-in-out;
+  }
+  .carousel__thumbnails img {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+  }
+  
+  @-webkit-keyframes scroll {
+	0% {
+	  transform: translateX(0);
+	}
+	100% {
+	  transform: translateX(calc(-250px * 7));
+	}
+  }
+  
+  @keyframes scroll {
+	0% {
+	  transform: translateX(0);
+	}
+	100% {
+	  transform: translateX(calc(-250px * 7));
+	}
+  }
+  .slider {
+	background: white;
+	box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
+	height: 100px;
+	margin: auto;
+	overflow: hidden;
+	position: relative;
+	width: 960px;
+  }
+  .slider::before, .slider::after {
+	background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
+	content: "";
+	height: 100px;
+	position: absolute;
+	width: 200px;
+	z-index: 2;
+  }
+  .slider::after {
+	right: 0;
+	top: 0;
+	transform: rotateZ(180deg);
+  }
+  .slider::before {
+	left: 0;
+	top: 0;
+  }
+  .slider .slide-track {
+	-webkit-animation: scroll 40s linear infinite;
+			animation: scroll 40s linear infinite;
+	display: flex;
+	width: calc(250px * 14);
+  }
+  .slider .slide {
+	height: 100px;
+	width: 100%;
+  }
