--- a/src/views/contactos.html
+++ b/src/views/contactos.html
@@ -31,24 +31,24 @@
                 <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="/src/html/portafolio.html" role="button" aria-expanded="false">Portafolio</a>
+                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Portafolio</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html">Portafolio</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio1">Autocarpado Volqueta</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio2">Manual Volqueta</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio3">Autocarpado Mula</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio4">Manual Mula</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio5">Protector Lateral</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio6">Cintas Reflectivas</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio7">Discos Abrasivos</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio8">Repuestos</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio9">Malacates</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html">Portafolio</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio1">Autocarpado Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio2">Manual Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio3">Autocarpado Mula</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio4">Manual Mula</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio5">Protector Lateral</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio6">Cintas Reflectivas</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio7">Discos Abrasivos</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio8">Repuestos</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio9">Malacates</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="/src/html/" role="button" aria-expanded="false">Tienda</a>
+                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Tienda</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/src/html/tienda.html">Tienda</a></li>
+                  <li><a class="dropdown-item" href="/src/views/tienda.html">Tienda</a></li>
                   <li><a class="dropdown-item" href="#">Autocarpado Volqueta</a></li>
                   <li><a class="dropdown-item" href="#">Manual Volqueta</a></li>
                   <li><a class="dropdown-item" href="#">Autocarpado Mula</a></li>
@@ -61,12 +61,12 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/src/html/Quienessomos.html">¿Quienes Somos?</a>
+                <a class="nav-link active" href="/src/views/Quienessomos.html">¿Quienes Somos?</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/src/html/contactos.html">Contactos</a>
+                <a class="nav-link active" href="/src/views/contactos.html">Contactos</a>
               </li>
-            
+             
            
             </ul>
           </div>
@@ -74,21 +74,15 @@
     </nav>
   </header>
   <main>
-      <section class="">
-        <video  class="w-100 h-25 animate__animated animate__tada" src="./assets/video/SISDECARSAS(1).mp4" muted autoplay loop></video>        
+      <section class="bg-yellow w-100">
+        <img src="/assets/img/MAURICIO.jpg" class="w-25 h-25 img-fluid d-block m-xxl-auto mx-auto" alt="">      
       </section>
 
 
 
-      <section>
-        <div class="container my-5 bg-danger text-center h-100">
-          <div class="row">
-               <div class="col">
-                <h2>Nuestros productos</h2>
-               </div>
-          </div>
-        </div>
-    </section>
+
+
+
 
       <section>
         <div class="container my-5 text-center">
@@ -96,24 +90,22 @@
     
             <div class="col-12 ">
               <div class="card">
-                <h4>Productos</h4>
-                <p>-Autocarpado Volqueta
-                 <br>
-                 -Manual Volqueta
-                 <br>
-                 -Autocarpado Mula
-                 <br>
-                 -Manual Mula
-                 <br>
-                 -Protector Lateral
-                 <br>
-                 -Cintas Reflectivas
-                 <br>
-                 -Discos Abrasivos
-                 <br>
-                 -Repuestos
-                 <br>
-                 -Malacates
+                <h4>Contactanos</h4>
+                <div class="container">
+                  <form class="row g-3 d-block">
+                    <div class="col-auto">
+                      <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    </div>
+                    <div class="col-auto">
+                      <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <div class="col-auto">
+                      <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
@@ -122,61 +114,24 @@
 
 
     <!---->
-    
+
 
 
 
     <!---->
-  <section>
-      <div class="container bg-danger text-light h-100">
-        <div class="row">
-             <div class="col">
-              <h2>Tienda</h2>
-             </div>
-        </div>
-      </div>
-  </section>
 
-     <section>
-		<div class="container">
-			<div class="row row-cols-1 row-cols-md-3" id="productosprincipales">
 
-			</div>
-		</div>
-	 </section>
+
 	<!---->
+
     <!---->
-      <section>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-            <div>
-                Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
-                </div>
-                
-                <div class="dropdown mt-3">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
-                    Dropdown button
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-                </div>
-            
-            </div>
-        </div>
-      </section>
+      
       <section>
        <div class="container my-5">
         <div class="card logosisdecar">
           <div class="row">
-              <div class="col-6 my-5">
-                 <img src="/assets/img/MAURICIO.jpg"  class="img-fluid m-xxl-auto d-block mx-auto" alt="">
+              <div class="col-6">
+                 <img src=""  class="img-fluid d-block" alt="">
               </div>
               <div class="col-6">
                 <div class="card  text-white bg-secondary  text-center my-5 mx-5">
@@ -188,9 +143,10 @@
         </div>
        </div>
       </section>
+      
   </main>
   <footer class="bg-dark text-light d-block text-center ">
-    <div class="linksimportantes mx-5 h-100">
+    <div class="linksimportantes mx-5  h-100">
                      
       <div class="row  row-cols-1 row-cols-md-3 h-100">
         
@@ -252,8 +208,8 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
-<script src="/src/controllers/controladorllenado.js"> </script>
-<script src="/src/controllers/controladorllenadoproductosprincipales.js"></script>
+<script src="./src/controllers/controladorllenado.js"> </script>
+<script src="./src/controllers/controladorllenadoproductosprincipales.js"></script>
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
