--- a/assets/styles/estilos.css
+++ b/assets/styles/estilos.css
@@ -1,6 +1,7 @@
 .navegacion{
 
-
+position: fixed;
+z-index: 1;
 
 }
 .links{
@@ -26,8 +27,10 @@
 	position: absolute;
     top: 400px; left: 300px;
 	font-size: 130px;
-	z-index: 1;
 
+}
+.carousel{
+	z-index: 0;
 }
 
 
@@ -93,7 +96,6 @@
   
   .carousel__slides {
 	position: relative;
-	z-index: 1;
 	padding: 0;
 	margin: 0;
 	overflow: hidden;
@@ -239,7 +241,7 @@
 	height: 100px;
 	position: absolute;
 	width: 200px;
-	z-index: 2;
+
   }
   .slider::after {
 	right: 0;
