--- a/src/views/portafolio.html
+++ b/src/views/portafolio.html
@@ -33,22 +33,22 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Portafolio</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html">Portafolio</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio1">Autocarpado Volqueta</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio2">Manual Volqueta</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio3">Autocarpado Mula</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio4">Manual Mula</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio5">Protector Lateral</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio6">Cintas Reflectivas</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio7">Discos Abrasivos</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio8">Repuestos</a></li>
-                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio9">Malacates</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html">Portafolio</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio1">Autocarpado Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio2">Manual Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio3">Autocarpado Mula</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio4">Manual Mula</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio5">Protector Lateral</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio6">Cintas Reflectivas</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio7">Discos Abrasivos</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio8">Repuestos</a></li>
+                  <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio9">Malacates</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Tienda</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/src/html/tienda.html">Tienda</a></li>
+                  <li><a class="dropdown-item" href="/src/views/tienda.html">Tienda</a></li>
                   <li><a class="dropdown-item" href="#">Autocarpado Volqueta</a></li>
                   <li><a class="dropdown-item" href="#">Manual Volqueta</a></li>
                   <li><a class="dropdown-item" href="#">Autocarpado Mula</a></li>
@@ -61,14 +61,12 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/src/html/Quienessomos.html">¿Quienes Somos?</a>
+                <a class="nav-link active" href="/src/views/Quienessomos.html">¿Quienes Somos?</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/src/html/contactos.html">Contactos</a>
+                <a class="nav-link active" href="/src/views/contactos.html">Contactos</a>
               </li>
-              <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                <i class="bi bi-box-arrow-in-right"></i> Navegacion Portafolio
-             </button>
+
            
             </ul>
           </div>
@@ -84,45 +82,6 @@
 
  <section class="row-cols-1">
 
-  <section>
-    <div class="container my-5 bg-danger text-center h-100">
-      <div class="row">
-           <div class="col">
-            <h2>Portafolio de productos</h2>
-           </div>
-      </div>
-    </div>
-</section>
-
-  <section>
-    <div class="container my-5 text-center">
-      <div class="row">
-
-        <div class="col-12 ">
-          <div class="card">
-            <h4>Productos</h4>
-            <p>-Autocarpado Volqueta
-             <br>
-             -Manual Volqueta
-             <br>
-             -Autocarpado Mula
-             <br>
-             -Manual Mula
-             <br>
-             -Protector Lateral
-             <br>
-             -Cintas Reflectivas
-             <br>
-             -Discos Abrasivos
-             <br>
-             -Repuestos
-             <br>
-             -Malacates
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <section>
     <div class="container my-5 bg-danger text-center h-100">
@@ -143,12 +102,13 @@
 </section>
 
 <!---->
+
 <section>
   <div class="container">
     <div class="row row-cols-1">
       <div class="col-12 bg-yellow text-center">
         <p>Su funcion es mejorar la seguridad y la carga rapida ya que este sistema se encarga de enrrollar y desenrrollar la carpa de la volqueta desde la cabina lo cual permite que la seguridad de nuestros conductores sea la mejor, ademas que ahorren tiempo, el cual se pierde al subirse al volco a colocar una carpa.</p>
-        <iframe class="row-cols-1 w-100 img-fluid" width="560" height="315" src="https://www.youtube.com/embed/73PK7cVCVIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/73PK7cVCVIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-12 ">
         <a href="btn btn-primary w-100 h-100"></a>
@@ -158,6 +118,8 @@
       
   </div>
 </section>
+
+
  </section>
  <!--seccion2-->
  <section class="row-cols-1">
@@ -173,7 +135,7 @@
 
 <section>
   <div class="container">
-    <div class="row row-cols-1 row-cols-md-3" id="fotosportafolio1">
+    <div class="row row-cols-1 row-cols-md-3" id="fotosportafolio2">
 
     </div>
   </div>
@@ -239,7 +201,7 @@
     <div class="container my-5 bg-danger text-center h-100">
       <div class="row">
            <div class="col">
-            <h2>Sistema Autocarpado Volqueta</h2>
+            <h2>Sistema Manual Mula</h2>
            </div>
       </div>
     </div>
@@ -276,7 +238,7 @@
     <div class="container my-5 bg-danger text-center h-100">
       <div class="row">
            <div class="col">
-            <h2>Sistema Autocarpado Volqueta</h2>
+            <h2>Protector Lateral<p>(Bicicletero)</p></h2>
            </div>
       </div>
     </div>
@@ -313,7 +275,7 @@
     <div class="container my-5 bg-danger text-center h-100">
       <div class="row">
            <div class="col">
-            <h2>Sistema Autocarpado Volqueta</h2>
+            <h2>Cinta Reflectiva</h2>
            </div>
       </div>
     </div>
@@ -350,7 +312,7 @@
     <div class="container my-5 bg-danger text-center h-100">
       <div class="row">
            <div class="col">
-            <h2>Sistema Autocarpado Volqueta</h2>
+            <h2>Discos Abrasivos</h2>
            </div>
       </div>
     </div>
@@ -387,7 +349,7 @@
     <div class="container my-5 bg-danger text-center h-100">
       <div class="row">
            <div class="col">
-            <h2>Sistema Autocarpado Volqueta</h2>
+            <h2>Malacates</h2>
            </div>
       </div>
     </div>
@@ -424,7 +386,7 @@
     <div class="container my-5 bg-danger text-center h-100">
       <div class="row">
            <div class="col">
-            <h2>Sistema Autocarpado Volqueta</h2>
+            <h2>Repuestos</h2>
            </div>
       </div>
     </div>
@@ -461,38 +423,7 @@
 	<!---->
 
     <!---->
-      <section>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasExampleLabel">Portafolio</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-            <div>
-                Selecciona el portafolio que desees mirar
-                </div>
-                
-                <div class="dropdown mt-3">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
-                    Selecciona portafolio
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="/src/html/portafolio.html">Portafolio</a></li>
-                      <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio1">Autocarpado Volqueta</a></li>
-                      <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio2">Manual Volqueta</a></li>
-                      <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio3">Autocarpado Mula</a></li>
-                      <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio4">Manual Mula</a></li>
-                      <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio5">Protector Lateral</a></li>
-                      <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio6">Cintas Reflectivas</a></li>
-                      <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio7">Discos Abrasivos</a></li>
-                      <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio8">Repuestos</a></li>
-                      <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio9">Malacates</a></li>
-                    </ul>
-                </div>
-            
-            </div>
-        </div>
-      </section>
+     
       <section>
        <div class="container my-5">
         <div class="card logosisdecar">
@@ -510,15 +441,52 @@
         </div>
        </div>
       </section>
-	  <section>
-		<div class="container">
-      <div class="row">
-        <div class="col">
-          clientes
+      <section>
+        <div class="container">
+          <div class="row row-cols-1 row-cols-md-1">
+            <div class="col-12">
+              <div class="slider my-4">
+                <div class="slide-track">
+                  <div class="slide">
+                    <img src="../../assets/img/logoempresasafiliadassisdecar/logo1.jpg" class="w-100 img-fluid" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="../../assets/img/logoempresasafiliadassisdecar/logo2.jpg" class="w-100 img-fluid" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="../../assets/img/logoempresasafiliadassisdecar/logo3.jpg" class="w-100 img-fluid" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="../../assets/img/logoempresasafiliadassisdecar/logo4.jpg" class="w-100 img-fluid" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="../../assets/img/logoempresasafiliadassisdecar/logo5.jpg" class="w-100 img-fluid" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="../../assets/img/logoempresasafiliadassisdecar/logo6.jpg" class="w-100 img-fluid" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="../../assets/img/logoempresasafiliadassisdecar/logo7.jpg" class="w-100 img-fluid" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="../../assets/img/logoempresasafiliadassisdecar/logo8.jpg" class="w-100 img-fluid" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="../../assets/img/logoempresasafiliadassisdecar/logo9.jpg"class="w-100 img-fluid" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="../../assets/img/logoempresasafiliadassisdecar/logo10.jpg" class="w-100 img-fluid" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="../../assets/img/logoempresasafiliadassisdecar/logo11.jpg" class="w-100 img-fluid" height="100" width="250" alt="" />
+                  </div>
+                </div>
+              </div>
+       
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-	  </section>
+      </section>
   </main>
 
   <footer class="bg-dark text-light d-block text-center ">
@@ -584,9 +552,7 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
-<script src="/src/controllers/controladorllenadoportafolio.js"></script>
-  <script src="/src/controllers/controladorllenado.js"> </script>
-<script src="/src/controllers/controladorllenadoproductosprincipales.js"></script>
+  <script src="../controllers/controladorPortafolio.js" type="module"> </script>
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
