creamos el menudesplegable de productos

--- a/src/views/Quienessomos.html
+++ b/src/views/Quienessomos.html
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar w-100 navbar-expand-lg bg-yellow navegacion ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Sisdecar</a>
+          <img src="../../assets/img/logoportada.png" class="img-fluid" alt="">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -32,7 +32,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Portafolio</a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu bg-yellow">
                   <li><a class="dropdown-item" href="/src/views/portafolio.html">Portafolio</a></li>
                   <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio1">Autocarpado Volqueta</a></li>
                   <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio2">Manual Volqueta</a></li>
@@ -47,7 +47,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Tienda</a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu bg-yellow">
                   <li><a class="dropdown-item" href="/src/views/tienda.html">Tienda</a></li>
                   <li><a class="dropdown-item" href="#">Autocarpado Volqueta</a></li>
                   <li><a class="dropdown-item" href="#">Manual Volqueta</a></li>
@@ -76,8 +76,8 @@
   <main>
       <section class="">
         <div class="row row-cols-1">
-          <img src="../../assets/img/bannerquienesomos.jpeg" class="w-100 h-100 img-fluid " alt="">
-          <h1 class="bannerquienessomos text-light">Sobre Nosotros</h1> 
+          <img src="../../assets/img/bannerquienesomos.jpeg.png" class="w-100 h-100 img-fluid " alt="">
+          
         </div>     
       </section>
 
@@ -193,7 +193,7 @@
                         <li class="carousel__slide">
                             <figure>
                                 <div>
-                                    <img src="https://firebasestorage.googleapis.com/v0/b/proyectomauricio-abd16.appspot.com/o/sisdecarimg.png?alt=media&token=dd1941f6-9718-4b77-bbdc-9af3d0e02d2b" class="w-100 h-100 img-fluid" alt="Logosisdecar">
+                                    <img src="https://firebasestorage.googleapis.com/v0/b/proyectomauricio-abd16.appspot.com/o/SisdecarLogo.png?alt=media&token=83de6dc6-1cdd-48b2-80f8-626bd33aa343" class="w-100 h-100 img-fluid" alt="Logosisdecar">
                                 </div>
                              
                             </figure>
@@ -418,8 +418,7 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
-<script src="./src/controllers/controladorllenado.js"> </script>
-<script src="./src/controllers/controladorllenadoproductosprincipales.js"></script>
+<script src="./src/controllers/controladorTienda.js"> </script>
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
