--- a/src/views/portafolio.html
+++ b/src/views/portafolio.html
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar w-100 navbar-expand-lg bg-yellow navegacion ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Sisdecar</a>
+          <img src="../../assets/img/logoportada.png" class="img-fluid" alt="">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -32,7 +32,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Portafolio</a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu bg-yellow">
                   <li><a class="dropdown-item" href="/src/views/portafolio.html">Portafolio</a></li>
                   <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio1">Autocarpado Volqueta</a></li>
                   <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio2">Manual Volqueta</a></li>
@@ -47,7 +47,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Tienda</a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu bg-yellow">
                   <li><a class="dropdown-item" href="/src/views/tienda.html">Tienda</a></li>
                   <li><a class="dropdown-item" href="#">Autocarpado Volqueta</a></li>
                   <li><a class="dropdown-item" href="#">Manual Volqueta</a></li>
@@ -80,12 +80,12 @@
 
 
 
- <section class="row-cols-1">
+ <section class="">
 
 
   <section>
     <div class="container my-5 bg-danger text-center h-100">
-      <div class="row">
+      <div class="row row-cols-1">
            <div class="col">
             <h2>Sistema Autocarpado Volqueta</h2>
            </div>
@@ -146,7 +146,11 @@
   <div class="container">
     <div class="row row-cols-1">
       <div class="col-12 bg-yellow text-center">
-        <p>Su funcion es mejorar la seguridad y la carga rapida ya que este sistema se encarga de enrrollar y desenrrollar la carpa de la volqueta desde la cabina lo cual permite que la seguridad de nuestros conductores sea la mejor, ademas que ahorren tiempo, el cual se pierde al subirse al volco a colocar una carpa.</p>
+        <p>Su funcion es mejorar la seguridad y la carga rapida ya que
+          este sistema se encarga de enrrollar y desenrrollar la carpa 
+          de la volqueta desde abajo del volco lo cual permite que la seguridad de nuestros
+          conductores sea optima, ademas que ahorren tiempo, el cual 
+          se pierde al subirse al volco a colocar una carpa. </p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/73PK7cVCVIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-12 ">
@@ -183,8 +187,12 @@
   <div class="container">
     <div class="row row-cols-1">
       <div class="col-12 bg-yellow text-center">
-        <p>Su funcion es mejorar la seguridad y la carga rapida ya que este sistema se encarga de enrrollar y desenrrollar la carpa de la volqueta desde la cabina lo cual permite que la seguridad de nuestros conductores sea la mejor, ademas que ahorren tiempo, el cual se pierde al subirse al volco a colocar una carpa.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/73PK7cVCVIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Su funcion es mejorar la seguridad y la carga rapida ya que
+          este sistema se encarga de carpar y desencarpar la carpa 
+          de la mula desde la cabina lo cual permite que la seguridad de nuestros
+          conductores sea la mejor, ademas que ahorren tiempo ya que
+          el volco de estas mulas es demasiado largo y tedioso para su puesta.</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Mtjn_TGGh8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-12 ">
         <a href="btn btn-primary w-100 h-100"></a>
@@ -220,8 +228,12 @@
   <div class="container">
     <div class="row row-cols-1">
       <div class="col-12 bg-yellow text-center">
-        <p>Su funcion es mejorar la seguridad y la carga rapida ya que este sistema se encarga de enrrollar y desenrrollar la carpa de la volqueta desde la cabina lo cual permite que la seguridad de nuestros conductores sea la mejor, ademas que ahorren tiempo, el cual se pierde al subirse al volco a colocar una carpa.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/73PK7cVCVIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Su funcion es mejorar la seguridad y la carga rapida ya que
+          este sistema se encarga de carpar y desencarpar la carpa 
+          de la mula desde el volco lo cual permite que la seguridad de nuestros
+          conductores sea optima, ademas que ahorren tiempo ya que
+          el volco de estas mulas es demasiado largo y tedioso para su puesta.</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/oWSxye-x3BI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-12 ">
         <a href="btn btn-primary w-100 h-100"></a>
@@ -257,8 +269,10 @@
   <div class="container">
     <div class="row row-cols-1">
       <div class="col-12 bg-yellow text-center">
-        <p>Su funcion es mejorar la seguridad y la carga rapida ya que este sistema se encarga de enrrollar y desenrrollar la carpa de la volqueta desde la cabina lo cual permite que la seguridad de nuestros conductores sea la mejor, ademas que ahorren tiempo, el cual se pierde al subirse al volco a colocar una carpa.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/73PK7cVCVIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Su funcion es mejorar la seguridad para los motociclistas, ciclistas y peatones 
+          ya que el hueco en el medio de las dos llantas se genera una corriente de aire 
+          la cual genera la mayoria de los accidentes en carretera como en la ciudad.</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/8GL3RJWGai8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-12 ">
         <a href="btn btn-primary w-100 h-100"></a>
@@ -294,7 +308,9 @@
   <div class="container">
     <div class="row row-cols-1">
       <div class="col-12 bg-yellow text-center">
-        <p>Su funcion es mejorar la seguridad y la carga rapida ya que este sistema se encarga de enrrollar y desenrrollar la carpa de la volqueta desde la cabina lo cual permite que la seguridad de nuestros conductores sea la mejor, ademas que ahorren tiempo, el cual se pierde al subirse al volco a colocar una carpa.</p>
+        <p>Su funcion es dar visibilidad en las zonas menos visibles tales como 
+          boscosas o pistas abiertas con poca luz estas cintas son las mas reflectivas
+          del mercado y nos de una mayor seguridad a la hora de viajar.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/73PK7cVCVIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-12 ">
@@ -331,7 +347,10 @@
   <div class="container">
     <div class="row row-cols-1">
       <div class="col-12 bg-yellow text-center">
-        <p>Su funcion es mejorar la seguridad y la carga rapida ya que este sistema se encarga de enrrollar y desenrrollar la carpa de la volqueta desde la cabina lo cual permite que la seguridad de nuestros conductores sea la mejor, ademas que ahorren tiempo, el cual se pierde al subirse al volco a colocar una carpa.</p>
+        <p>Su funcion es cortar de la manera mas eficiente  a la hora de realizar en 
+          cualesquier tipo de trabajo requerido ademas de generar un mayor economia 
+          para las obras ya que su exelente resistencia y bajo cosoto hacen de estos
+          los mejores discos de mercado.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/73PK7cVCVIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-12 ">
@@ -368,8 +387,10 @@
   <div class="container">
     <div class="row row-cols-1">
       <div class="col-12 bg-yellow text-center">
-        <p>Su funcion es mejorar la seguridad y la carga rapida ya que este sistema se encarga de enrrollar y desenrrollar la carpa de la volqueta desde la cabina lo cual permite que la seguridad de nuestros conductores sea la mejor, ademas que ahorren tiempo, el cual se pierde al subirse al volco a colocar una carpa.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/73PK7cVCVIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Su funcion es mejorar el tiempo y el esfuerzo para levantar y mover 
+          objetos de bastante peso, ya que esto permite de la manera mas simple
+          y eficaz levantar bastantes kilos.</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/WhkJXqkXIW4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-12 ">
         <a href="btn btn-primary w-100 h-100"></a>
@@ -405,7 +426,8 @@
   <div class="container">
     <div class="row row-cols-1">
       <div class="col-12 bg-yellow text-center">
-        <p>Su funcion es mejorar la seguridad y la carga rapida ya que este sistema se encarga de enrrollar y desenrrollar la carpa de la volqueta desde la cabina lo cual permite que la seguridad de nuestros conductores sea la mejor, ademas que ahorren tiempo, el cual se pierde al subirse al volco a colocar una carpa.</p>
+        <p>En esta seccion tenemos que se encuentran todos los repuestos de cada uno de los 
+          productos que tenemos en venta y en stock.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/73PK7cVCVIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="col-12 ">
