--- a/src/views/atencionalcliente.html
+++ b/src/views/atencionalcliente.html
@@ -282,7 +282,7 @@ El titular de los datos personales en tratamiento, para efectos de ejercer sus d
     </section>
     <section>
       <div class="container">
-        <div class="row">
+        <div class="row text-center">
           <div class="col-12">
             <h1>Preguntas Frecuentes</h1>
           </div>
@@ -294,10 +294,11 @@ El titular de los datos personales en tratamiento, para efectos de ejercer sus d
     </section>
     <section>
       <div class="container">
-        <div class="row">
+        <div class="row text-center">
           <div class="col-12">
             <h1>Pedidos y Envios</h1>
           </div>
+          div.col-12
         </div>
       </div>
     </section>
@@ -401,8 +402,8 @@ El titular de los datos personales en tratamiento, para efectos de ejercer sus d
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
-<script src="./src/controllers/controladorllenado.js"> </script>
-<script src="./src/controllers/controladorllenadoproductosprincipales.js"></script>
+<script src="./src/controllers/controladorTienda.js"> </script>
+
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
