--- a/src/views/tiendaproducto.html
+++ b/src/views/tiendaproducto.html
@@ -21,18 +21,18 @@
   <header>
     <nav class="navbar w-100 navbar-expand-lg bg-yellow navegacion ">
         <div class="container-fluid">
-          <img src="../../assets/img/logoportada.png" class="img-fluid" alt="">
+          <img src="../../assets/img/logoportada.png" alt="">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse  justify-content-end " id="navbarNav">
             <ul class="navbar-nav ">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="/src/views/portafolio.html" role="button" aria-expanded="false">Portafolio</a>
-                <ul class="dropdown-menu bg-yellow">
+                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Portafolio</a>
+                <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/src/views/portafolio.html">Portafolio</a></li>
                   <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio1">Autocarpado Volqueta</a></li>
                   <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio2">Manual Volqueta</a></li>
@@ -45,8 +45,8 @@
                   <li><a class="dropdown-item" href="/src/views/portafolio.html#fotosportafolio9">Malacates</a></li>
                 </ul>
               </li>
-              <li class="nav-item dropdown bg-yellow">
-                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="/src/views/tienda.html" role="button" aria-expanded="false">Tienda</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Tienda</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/src/views/tienda.html">Tienda</a></li>
                   <li><a class="dropdown-item" href="#">Autocarpado Volqueta</a></li>
@@ -66,7 +66,7 @@
               <li class="nav-item">
                 <a class="nav-link active" href="/src/views/contactos.html">Contactos</a>
               </li>
-            
+        
            
             </ul>
           </div>
@@ -74,83 +74,56 @@
     </nav>
   </header>
   <main>
-  <section>
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="../../assets/img/84402016_516334459311954_7966699902086414336_n.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="../../assets/img/84402016_516334459311954_7966699902086414336_n.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="../../assets/img/84402016_516334459311954_7966699902086414336_n.jpg" class="d-block w-100" alt="...">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-  </section>
-
-
-
-    <!---->
-
-
-
-
-    <!---->
-  <section>
-    
-      <div class="container bg-danger text-light h-100">
-        <div class="row">
-             <div class="col">
-              <h2>Tienda</h2>
-             </div>
-        </div>
-      </div>
-    
-  </section>
-  <section>
-    <div class="container">
-      <div class="row">
-        <div class="col-12 my-2 row-cols 1 row-cols-md-4">
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="buscador">
-            
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
-
-     <section>
+    <br><br><br><br>
+    <section>
 		<div class="container">
-			<div class="row row-cols-1 row-cols-md-3" id="productosprincipales">
+			<div class="row row-cols-1 row-cols-md-2">
+				<div class="col-12 col-md-6">
+					<img src="/assets/img/213346047_874435320168531_123659390697797422_n.jpg.png" class="img-fluid w-100" alt="" id="imagenprincipalproductostienda">
+				</div>
+				<div class="col-12 col-md-5">
+					<h1 id="nombreproductostienda"></h1>
+					<h2>$10000</h2>
 
+					<div>
+						<input type="number" name="" id="">
+					</div>
+					<div class="my-2">
+						<input type="button" value="hola">
+					</div>
+                     
+				</div>
 			</div>
 		</div>
-	 </section>
-   <section>
+	</section>
+	<section>
+		<div class="bg-danger w-100">
+			<div class="row row-cols-1 row-cols-md-1 mt-5 mb-3 mx-2 w-100" id="nombretiendaproductos">
+		
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+		  <div class="row">
+			<div class="col-12 my-2 row-cols 1 row-cols-md-4">
+			  <form class="d-flex">
+				<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="buscador">
+			  </form>
+			</div>
+		  </div>
+		</div>
+	  </section>
+    <section>
 		<div class="container">
 			<div class="row row-cols-1 row-cols-md-3" id="productosdeproducto">
 
 			</div>
 		</div>
 	 </section>
-	<!---->
-    <!---->
-
-
   </main>
   <footer class="bg-dark text-light d-block text-center ">
-    <div class="linksimportantes mx-5 h-100">
+    <div class="linksimportantes mx-5  h-100">
                      
       <div class="row  row-cols-1 row-cols-md-3 h-100">
         
@@ -212,7 +185,8 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
-  <script src="../controllers/controladorTienda.js" type="module"></script>
+<script src="/src/controllers/controladorproductoampliadotiendacotizacion.js"> </script>
+
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
